--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,24 @@
-.ContadorGeneral {
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
+* {
+    background-color: black;
 }
 
-.OtrosIconos{
-    padding: 10px;
+.Principal{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 60px;
+    color: white;
+}
+
+.reloj{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    margin: 5px;
+    height: 60px;
+    background-color: blue;
+    border-radius: 10px;
+    font-size: xx-large;
+    font-family: 'Courier New';
 }
